# python-blueprint

./: Dockerfile  README.md  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json  postCreateCommand.sh
notebooks/: init.py
src/: hello_world.py
