[project]
name = "python-blueprint"
version = "2.0.0"
description = "Python Project Blueprint"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.0",
    "polars>=1.9.0",
    "pyarrow>=19.0.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mypy>=1.11.2",
    "pyproject-flake8>=7.0.0",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
